# tdcr-crt

./: .gitignore  CMakeLists.txt  CMakeListsOld.txt  CMakeListsOldv2.txt  README.md  package.xml
cfg/: SimulationParams.cfg
src/classes/tendon_robots/: tendon_robot_baseclass.py  tendon_robot_classes.py
src/classes/tendon_robots/c_generated_code_multistage_straight/multistage_straight_integrator1/: acados_sim_solver_multistage_straight_integrator1.c  acados_sim_solver_multistage_straight_integrator1.h
src/classes/tendon_robots/c_generated_code_multistage_straight/multistage_straight_integrator2/: acados_sim_solver_multistage_straight_integrator2.h
src/classes/tendon_robots/c_generated_code_multistage_straight/multistage_straight_step_integrator1/: acados_sim_solver_multistage_straight_step_integrator1.c  acados_sim_solver_multistage_straight_step_integrator1.h  main_sim_multistage_straight_step_integrator1.c
src/classes/tendon_robots/c_generated_code_multistage_straight/multistage_straight_step_integrator2/: Makefile  acados_sim_solver_multistage_straight_step_integrator2.h
src/tdcr_controller/: acados_ocp_tdcr_lmpc.json  linear_mpc_controller.py
src/tdcr_controller/c_generated_code_tdcr_lmpc/tdcr_lmpc/: make_sfun_tdcr_lmpc.m
src/tdcr_model/: MultistageTDCR_Solver.cpp  MultistageTDCR_Solver.hpp  TDCR_Interface.cpp  TDCR_Interface.hpp  acados_sim.json  tdcr_baseclass.py  tdcr_multistage_straight.py
src/tdcr_model/c_generated_code_multistage_straight/multistage_straight_integrator1/: acados_sim_solver_multistage_straight_integrator1.c  acados_sim_solver_multistage_straight_integrator1.h
src/tdcr_model/c_generated_code_multistage_straight/multistage_straight_integrator1/multistage_straight_integrator1_model/: multistage_straight_integrator1_expl_ode_fun.c  multistage_straight_integrator1_expl_vde_adj.c  multistage_straight_integrator1_expl_vde_forw.c
src/tdcr_model/c_generated_code_multistage_straight/multistage_straight_integrator2/: acados_sim_solver_multistage_straight_integrator2.c  acados_sim_solver_multistage_straight_integrator2.h
src/tdcr_model/c_generated_code_multistage_straight/multistage_straight_integrator2/multistage_straight_integrator2_model/: multistage_straight_integrator2_expl_ode_fun.c  multistage_straight_integrator2_expl_vde_adj.c  multistage_straight_integrator2_expl_vde_forw.c
src/tdcr_model/c_generated_code_multistage_straight/multistage_straight_step_integrator1/: acados_sim_solver_multistage_straight_step_integrator1.c  acados_sim_solver_multistage_straight_step_integrator1.h  main_sim_multistage_straight_step_integrator1.c
src/tdcr_model/c_generated_code_multistage_straight/multistage_straight_step_integrator1/multistage_straight_step_integrator1_model/: multistage_straight_step_integrator1_expl_ode_fun.c  multistage_straight_step_integrator1_expl_vde_adj.c  multistage_straight_step_integrator1_expl_vde_forw.c
src/tdcr_model/c_generated_code_multistage_straight/multistage_straight_step_integrator2/: acados_sim_solver_multistage_straight_step_integrator2.c  main_sim_multistage_straight_step_integrator2.c
src/tdcr_model/c_generated_code_multistage_straight/multistage_straight_step_integrator2/multistage_straight_step_integrator2_model/: multistage_straight_step_integrator2_expl_ode_fun.c  multistage_straight_step_integrator2_expl_vde_adj.c  multistage_straight_step_integrator2_expl_vde_forw.c  multistage_straight_step_integrator2_model.h
src/tendon_robots/: IntegratorInterface.cpp  MathUtils.hpp  MultistageTDCR_Solver.cpp  MultistageTDCR_Solver.hpp  TDCR_Interface.cpp  TDCR_Interface.hpp  acados_sim.json  tdcr_multistage_straight.py
src/tendon_robots/c_generated_code_multistage_straight/multistage_straight_integrator1/: Makefile  acados_sim_solver_multistage_straight_integrator1.c  main_sim_multistage_straight_integrator1.c
src/tendon_robots/c_generated_code_multistage_straight/multistage_straight_integrator1/multistage_straight_integrator1_model/: multistage_straight_integrator1_expl_ode_fun.c  multistage_straight_integrator1_expl_vde_adj.c  multistage_straight_integrator1_expl_vde_forw.c
src/tendon_robots/c_generated_code_multistage_straight/multistage_straight_integrator2/: Makefile  acados_sim_solver_multistage_straight_integrator2.c  main_sim_multistage_straight_integrator2.c
src/tendon_robots/c_generated_code_multistage_straight/multistage_straight_integrator2/multistage_straight_integrator2_model/: multistage_straight_integrator2_expl_ode_fun.c  multistage_straight_integrator2_expl_vde_adj.c  multistage_straight_integrator2_expl_vde_forw.c
src/tendon_robots/c_generated_code_multistage_straight/multistage_straight_step_integrator1/: Makefile  acados_sim_solver_multistage_straight_step_integrator1.c
src/tendon_robots/c_generated_code_multistage_straight/multistage_straight_step_integrator2/: acados_sim_solver_multistage_straight_step_integrator2.c  acados_sim_solver_multistage_straight_step_integrator2.h  main_sim_multistage_straight_step_integrator2.c
src/tether_unit/: acados_sim.json  rod_parameterbuilder.py  tetherunit.py  tetherunit_BVPTEST.py  tetherunit_acados_dae.json
src/tether_unit/c_generated_code_tether_unit/tetherunit/: Makefile  acados_sim_solver_tetherunit.c  acados_sim_solver_tetherunit.h  main_sim_tetherunit.c
src/tether_unit/c_generated_code_tether_unit/tetherunit/tetherunit_model/: tetherunit_expl_ode_fun.c  (+7 more)
src/tether_unit/c_generated_code_tether_unit/tetherunit_stepIntegrator/: Makefile  acados_sim_solver_tetherunit_stepIntegrator.c  acados_sim_solver_tetherunit_stepIntegrator.h  main_sim_tetherunit_stepIntegrator.c
tests/: ClosedLoopNodeThreeStage.cpp  SimulationNodeThreeStageExample.cpp  SimulationNodeTwoStageExample.cpp  TDCR_Test.cpp  TestQuaternions.cpp  tdcr_test.cpp  test_integrator.cpp  test_stage_calculator.cpp
utils/: ControllerInterface.cpp  ControllerInterface.hpp  Integrator.hpp  IntegratorInterface.cpp  IntegratorInterface.hpp  LevenbergMarquardtFunctor.cpp  LevenbergMarquardtFunctor.hpp  MathUtils.cpp  MathUtils.hpp  c_func_exporter.py  math_functions_casadi.py
(+25 files in other folders)
